<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/etCommands"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/command" />

   <LinearLayout 
       android:weightSum="100"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:orientation = "horizontal" >
	    <Button
	        android:id="@+id/bResults"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/command_button" 
	        android:layout_weight = "20" />
		<ToggleButton
	        android:id="@+id/tbPassword"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/toggle_button" 
	        android:layout_weight = "80"
	        android:paddingBottom="0dp"
	         />
	</LinearLayout>
   
	<TextView
        android:id="@+id/tvResults"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/results" />

</LinearLayout>